--- a/package.json
+++ b/package.json
@@ -11,17 +11,24 @@
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.14.2",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.5",
+    "jose": "^6.0.11",
     "lucide-react": "^0.525.0",
-    "motion": "^12.23.0",
+    "mongoose": "^8.16.3",
+    "motion": "^12.23.12",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.3.1"
+    "react-hot-toast": "^2.5.2",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
